<resources>
    <string name="app_name">AlkeWalletMod6</string>
    <string name="button1">Crear cuenta nueva</string>
    <string name="txt1">El lugar más seguro para tu dinero</string>
    <string name="txt2">Ya tiene cuenta?</string>
    <string name="txt31">Logea y empieza a transferir</string>
    <string name="txt32">Email</string>
    <string name="txt33">Contraseña</string>
    <string name="txt34">Olvidaste tu contraseña?</string>
    <string name="button3">Login</string>
    <string name="txt35">Crea una nueva cuenta</string>
    <string name="txt41">Registrarse y empezar a transferir</string>
    <string name="txt42">Nombres</string>
    <string name="txt43">Apellidos</string>
    <string name="txt44">Reingresar contraseña</string>
    <string name="button4">Crear cuenta</string>
    <string name="txt45">Ya tienes una cuenta??</string>
    <string name="button5">Enviar dinero</string>
    <string name="button6">Recibir dinero</string>
    <string name="inicio">Inicio</string>
    <string name="saludo">Hola, Amanda</string>
    <string name="txt51">Balance Total</string>
    <string name="dinero">$ 124.57</string>
    <string name="mensajeTrans">Últimas transacciones</string>
    <string name="hint1">Escribe tus Nombres</string>
    <string name="hint2">Escribe tus Apellidos</string>
    <string name="hint3">Escribe tu Mail</string>
    <string name="txt61">No hay transacciones registradas</string>
    <string name="txt71">Ingresar Dinero</string>
    <string name="txt72">Cantidad a Ingresar</string>
    <string name="hint4">20.00 |</string>
    <string name="txt73">Notas de Transferencia</string>
    <string name="hint5">Agregar notas de transferencia (opcional)</string>
    <string name="button9">Ingresar Dinero</string>
    <string name="text81">Enviar Dinero</string>
    <string name="text83">Cantidad a Transferir</string>
    <string name="hint6">12.50 |</string>
    <string name="button10">Enviar Dinero</string>
    <string name="txt91">Mi Perfil</string>
    <string name="txt92">Amanda Alkemy</string>
    <string name="hint7">Ingresar su Email</string>
    <string name="hint8">Ingrese su Contraseña</string>
    <string name="Cerrar">Cerrar sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_failed">Ocurrió un error al intentar iniciar sesión.</string>

    <string name="home_transactions_error">Ocurrió un error cargando las últimas transacciones. Por favor, reintente en unos minutos.</string>

    <string name="invalid_amount">El monto debe ser mayor a 0 (cero)</string>

    <string name="home_hi">¡Hola %1$s!</string>
    <string name="home_hi_default">¡Hola!</string>
</resources>