<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splash_scree"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="12"
    tools:context=".Login.LoginFragment">

    <EditText
        android:id="@+id/txt41"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:layout_weight="4"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="@font/jua"
        android:gravity="center"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:text="@string/txt31"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/txt3a"
        android:layout_width="345dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:fontFamily="@font/jua"
        android:text="@string/txt32"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="345dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:background="@color/lila2"
        android:ems="10"
        android:fontFamily="@font/jua"
        android:hint="@string/hint7"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/gris2"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/txt3b"
        android:layout_width="345dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:fontFamily="@font/jua"
        android:text="@string/txt33"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/contra"
        android:layout_width="345dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:background="@color/lila2"
        android:ems="10"
        android:fontFamily="@font/jua"
        android:hint="@string/hint8"
        android:inputType="numberPassword"
        android:textColorHint="@color/gris2"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/txt81"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.5"
        android:fontFamily="@font/jua"
        android:gravity="right|center_vertical"
        android:text="@string/txt34"
        android:textColor="@color/celeste"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:layout_weight="1.5"
        android:text="" />

    <Button
        android:id="@+id/button3"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#63B8FC"
        android:fontFamily="@font/jua"
        android:text="@string/button3"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt45"
        android:layout_width="345dp"
        android:layout_height="27dp"
        android:layout_gravity="center"
        android:fontFamily="@font/jua"
        android:gravity="center"
        android:text="@string/txt35"
        android:textColor="@color/celeste"
        android:textSize="12sp"
        android:textStyle="bold" />

</LinearLayout>