<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splash_scree"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:weightSum="12"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txt41"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:ems="10"
        android:fontFamily="@font/jua"
        android:gravity="bottom|center_horizontal"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:text="@string/txt41"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/txt42"
        android:layout_width="320dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1.5"
        android:ems="10"
        android:fontFamily="@font/jua"
        android:freezesText="false"
        android:gravity="start"
        android:inputType="text"
        android:outlineAmbientShadowColor="#FFFCFC"
        android:text="@string/txt42"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <EditText
        android:id="@+id/txt43"
        android:layout_width="320dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1.5"
        android:ems="10"
        android:fontFamily="@font/jua"
        android:freezesText="false"
        android:gravity="start"
        android:inputType="text"
        android:outlineAmbientShadowColor="#FFFCFC"
        android:text="@string/txt43"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <EditText
        android:id="@+id/txt32"
        android:layout_width="320dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1.5"
        android:ems="10"
        android:fontFamily="@font/jua"
        android:freezesText="false"
        android:gravity="start"
        android:inputType="text"
        android:outlineAmbientShadowColor="#FFFCFC"
        android:text="@string/txt32"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <EditText
        android:id="@+id/txt33"
        android:layout_width="320dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1.5"
        android:ems="10"
        android:fontFamily="@font/jua"
        android:freezesText="false"
        android:gravity="start"
        android:inputType="text"
        android:text="@string/txt33"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <EditText
        android:id="@+id/txt44"
        android:layout_width="320dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1.5"
        android:ems="10"
        android:fontFamily="@font/jua"
        android:freezesText="false"
        android:gravity="start"
        android:inputType="text"
        android:text="@string/txt44"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/txt81"
        android:layout_width="320dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.5"
        android:gravity="right|center_vertical"
        android:text=""
        android:textColor="@color/celeste"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button3"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#63B8FC"
        android:fontFamily="@font/jua"
        android:text="@string/button4"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txt45"
        android:layout_width="239dp"
        android:layout_height="27dp"
        android:layout_gravity="center"
        android:fontFamily="@font/jua"
        android:gravity="center"
        android:text="@string/txt45"
        android:textColor="@color/celeste"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>
