<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity5">


    <TextView
        android:id="@+id/txt83"
        android:layout_width="356dp"
        android:layout_height="87dp"
        android:fontFamily="@font/jua"
        android:text="@string/txt72"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.267" />

    <TextView
        android:id="@+id/txt81"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_gravity="center_horizontal|top"
        android:fontFamily="@font/jua"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/txt71"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/flecha"
        android:layout_width="57dp"
        android:layout_height="46dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035"
        app:srcCompat="@drawable/flecha" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="195dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14"
        app:srcCompat="@drawable/contactinfo" />

    <EditText
        android:id="@+id/hint4"
        android:layout_width="356dp"
        android:layout_height="58dp"
        android:layout_marginBottom="476dp"
        android:background="@color/material_dynamic_neutral90"
        android:ems="10"
        android:hint="@string/hint4"
        android:fontFamily="@font/jua"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textColorHint="@color/design_default_color_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt73"
        android:layout_width="356dp"
        android:layout_height="189dp"
        android:layout_marginBottom="244dp"
        android:fontFamily="@font/jua"
        android:text="@string/txt73"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/hint5"
        android:layout_width="356dp"
        android:layout_height="152dp"
        android:layout_marginBottom="252dp"
        android:background="@color/material_dynamic_neutral90"
        android:ems="10"
        android:fontFamily="@font/jua"
        android:gravity="start|top"
        android:hint="@string/hint5"
        android:inputType="textMultiLine"
        android:textColorHint="@color/material_dynamic_neutral50"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="356dp"
        android:layout_height="48dp"
        android:layout_marginBottom="92dp"
        android:backgroundTint="@color/design_default_color_error"
        android:fontFamily="@font/jua"
        android:text="@string/button9"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>